<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/perguntas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questao5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/roda"
            style="@style/respostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perguntaCincoA" />

        <CheckBox
            android:id="@+id/volante"
            style="@style/respostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perguntaCincoB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/espelho"
            style="@style/respostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perguntaCincoC" />

        <CheckBox
            android:id="@+id/guarda_chuva"
            style="@style/respostas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/perguntaCincoD" />
    </LinearLayout>

</LinearLayout>