<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pertunta1_txt"
            style="@style/perguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questao2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/america_central"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perguntaDoisA" />

            <CheckBox
                android:id="@+id/europa"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/perguntaDoisB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/asia"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perguntaDoisC" />

            <CheckBox
                android:id="@+id/america_do_sul"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:text="@string/perguntaDoisD" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>