<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/perguntas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questao3" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sim"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perguntaTresA" />

            <RadioButton
                android:id="@+id/nao"
                style="@style/respostas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perguntaTresB" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>